--- a/base_di_partenza/articolo.html
+++ b/base_di_partenza/articolo.html
@@ -187,7 +187,7 @@
         />
       </svg>
 
-      <svg
+      <a href="#top"><svg
         id="icon3"
         xmlns="http://www.w3.org/2000/svg"
         height="60px"
@@ -198,11 +198,7 @@
         <path
           d="M480-442 336-298h288L480-442ZM186.67-120q-27.5 0-47.09-19.58Q120-159.17 120-186.67v-586.66q0-27.5 19.58-47.09Q159.17-840 186.67-840h586.66q27.5 0 47.09 19.58Q840-800.83 840-773.33v586.66q0 27.5-19.58 47.09Q800.83-120 773.33-120H186.67Zm586.66-515.33v-138H186.67v138h586.66Zm-586.66 66.66v382h586.66v-382H186.67Zm0-66.66v-138 138Z"
         />
-      </svg>
-
-
-
-
+      </svg></a>
 
     </div>
 </body>
